Refactoring TimeTable ... finished